User counter variable

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,11 +7,11 @@ pool:
   vmImage: windows-2019
 
 variables:
-  BuildNumber: $[counter('BuildNumber', 100)]
+  counter: $[counter('BuildNumber', 100)]
 
 steps:
 - task: MSBuild@1
   inputs:
     solution: Project.proj
     msbuildArguments: >
-        /p:BuildNumber=$(Build.BuildNumber)
+        /p:BuildNumber=$(Build.counter)
