--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ pool:
   vmImage: windows-2019
 
 variables:
-  counter: $[counter('BuildNumber', 100)]
+  counter: $[counter('$(Build.SourceBranch)', 0)]
 
 steps:
 - task: MSBuild@1
@@ -15,3 +15,4 @@ steps:
     solution: Project.proj
     msbuildArguments: >
         /p:BuildNumber=$(counter)
+        /p:BranchName=$(Build.SourceBranch)
